--- a/CAMageddon/imgui.ini
+++ b/CAMageddon/imgui.ini
@@ -21,8 +21,8 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Viewport]
-Pos=206,24
-Size=1074,756
+Pos=230,24
+Size=1050,756
 Collapsed=0
 DockId=0x00000001,0
 
@@ -81,20 +81,28 @@ DockId=0x00000001,1
 
 [Window][Test window]
 Pos=0,24
-Size=204,756
+Size=259,756
 Collapsed=0
 DockId=0x00000009,0
 
+[Window][Debug]
+Pos=0,24
+Size=228,756
+Collapsed=0
+DockId=0x0000000B,0
+
 [Docking][Data]
-DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,24 Size=1280,756 Split=X
-  DockNode        ID=0x00000009 Parent=0x3BC79352 SizeRef=204,756 Selected=0x8081D1E6
-  DockNode        ID=0x0000000A Parent=0x3BC79352 SizeRef=1074,756 Split=X
-    DockNode      ID=0x00000007 Parent=0x0000000A SizeRef=1008,998 Split=X
-      DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=220,998 Selected=0x788BAA0D
-      DockNode    ID=0x00000006 Parent=0x00000007 SizeRef=786,998 Split=X
-        DockNode  ID=0x00000001 Parent=0x00000006 SizeRef=301,761 CentralNode=1 Selected=0x995B0CF8
-        DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=977,761 Selected=0x995B0CF8
-    DockNode      ID=0x00000008 Parent=0x0000000A SizeRef=270,998 Split=Y Selected=0x1F88C31B
-      DockNode    ID=0x00000004 Parent=0x00000008 SizeRef=264,495 Selected=0xF02CD328
-      DockNode    ID=0x00000005 Parent=0x00000008 SizeRef=264,264 Selected=0x1F88C31B
+DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=0,24 Size=1280,756 Split=X
+  DockNode          ID=0x0000000B Parent=0x3BC79352 SizeRef=228,756 Selected=0xAD6468A3
+  DockNode          ID=0x0000000C Parent=0x3BC79352 SizeRef=1050,756 Split=X
+    DockNode        ID=0x00000009 Parent=0x0000000C SizeRef=259,756 Selected=0x8081D1E6
+    DockNode        ID=0x0000000A Parent=0x0000000C SizeRef=1019,756 Split=X
+      DockNode      ID=0x00000007 Parent=0x0000000A SizeRef=1008,998 Split=X
+        DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=220,998 Selected=0x788BAA0D
+        DockNode    ID=0x00000006 Parent=0x00000007 SizeRef=786,998 Split=X
+          DockNode  ID=0x00000001 Parent=0x00000006 SizeRef=301,761 CentralNode=1 Selected=0x995B0CF8
+          DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=977,761 Selected=0x995B0CF8
+      DockNode      ID=0x00000008 Parent=0x0000000A SizeRef=270,998 Split=Y Selected=0x1F88C31B
+        DockNode    ID=0x00000004 Parent=0x00000008 SizeRef=264,495 Selected=0xF02CD328
+        DockNode    ID=0x00000005 Parent=0x00000008 SizeRef=264,264 Selected=0x1F88C31B
 
