prepare basic simulation

--- a/CAMageddon/imgui.ini
+++ b/CAMageddon/imgui.ini
@@ -21,8 +21,8 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Viewport]
-Pos=230,24
-Size=1050,756
+Pos=229,24
+Size=1051,756
 Collapsed=0
 DockId=0x00000001,0
 
@@ -87,14 +87,22 @@ DockId=0x00000009,0
 
 [Window][Debug]
 Pos=0,24
-Size=228,756
+Size=227,104
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x0000000D,0
+
+[Window][Simulation]
+Pos=0,130
+Size=227,650
+Collapsed=0
+DockId=0x0000000E,0
 
 [Docking][Data]
 DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=0,24 Size=1280,756 Split=X
-  DockNode          ID=0x0000000B Parent=0x3BC79352 SizeRef=228,756 Selected=0xAD6468A3
-  DockNode          ID=0x0000000C Parent=0x3BC79352 SizeRef=1050,756 Split=X
+  DockNode          ID=0x0000000B Parent=0x3BC79352 SizeRef=227,756 Split=Y Selected=0xAD6468A3
+    DockNode        ID=0x0000000D Parent=0x0000000B SizeRef=227,104 Selected=0xAD6468A3
+    DockNode        ID=0x0000000E Parent=0x0000000B SizeRef=227,650 Selected=0x848745AB
+  DockNode          ID=0x0000000C Parent=0x3BC79352 SizeRef=1051,756 Split=X
     DockNode        ID=0x00000009 Parent=0x0000000C SizeRef=259,756 Selected=0x8081D1E6
     DockNode        ID=0x0000000A Parent=0x0000000C SizeRef=1019,756 Split=X
       DockNode      ID=0x00000007 Parent=0x0000000A SizeRef=1008,998 Split=X
