path generation contour

--- a/CAMageddon/imgui.ini
+++ b/CAMageddon/imgui.ini
@@ -93,15 +93,23 @@ DockId=0x0000000D,0
 
 [Window][Simulation]
 Pos=0,436
-Size=645,581
+Size=645,366
 Collapsed=0
-DockId=0x0000000E,0
+DockId=0x0000000F,0
+
+[Window][Path Generation]
+Pos=0,804
+Size=645,213
+Collapsed=0
+DockId=0x00000010,0
 
 [Docking][Data]
 DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=0,24 Size=1920,993 Split=X
   DockNode          ID=0x0000000B Parent=0x3BC79352 SizeRef=430,756 Split=Y Selected=0xAD6468A3
     DockNode        ID=0x0000000D Parent=0x0000000B SizeRef=227,312 Selected=0xAD6468A3
-    DockNode        ID=0x0000000E Parent=0x0000000B SizeRef=227,442 Selected=0x848745AB
+    DockNode        ID=0x0000000E Parent=0x0000000B SizeRef=227,442 Split=Y Selected=0x848745AB
+      DockNode      ID=0x0000000F Parent=0x0000000E SizeRef=430,278 Selected=0x848745AB
+      DockNode      ID=0x00000010 Parent=0x0000000E SizeRef=430,162 Selected=0xE5E60D24
   DockNode          ID=0x0000000C Parent=0x3BC79352 SizeRef=848,756 Split=X
     DockNode        ID=0x00000009 Parent=0x0000000C SizeRef=259,756 Selected=0x8081D1E6
     DockNode        ID=0x0000000A Parent=0x0000000C SizeRef=1019,756 Split=X
